--- a/base/package.json
+++ b/base/package.json
@@ -4,11 +4,14 @@
   "description": "quesot e' il materiale del corso its",
   "main": "nuovofile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./nuovofile.js",
+    "dev": "nodemon ./nuovofile.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.15"
   }
 }
