--- a/express/package.json
+++ b/express/package.json
@@ -4,7 +4,8 @@
   "description": "il nostro bellissimo test express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js"
   },
   "keywords": [
     "express",
@@ -13,6 +14,7 @@
   "author": "Fabrizio Marconi",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.3"
   },
   "devDependencies": {
