--- a/mysql-connect/package.json
+++ b/mysql-connect/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mdottavi/corsoits#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mysql2": "^2.3.3"
   },
