--- a/api-prenotazioni/package.json
+++ b/api-prenotazioni/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
