--- a/studenti/falascaz/package.json
+++ b/studenti/falascaz/package.json
@@ -12,6 +12,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mysql2": "^2.3.3"
   }
 }
