--- a/studenti/Marinucci/package.json
+++ b/studenti/Marinucci/package.json
@@ -4,8 +4,19 @@
     "description": "",
     "main": "Index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon ./index.js"
+
     },
     "author": "Roberto Marinucci",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    },
+    "dependencies": {
+        "body-parser": "^1.20.0",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "mysql2": "^2.3.3"
+    }
 }
