--- a/studenti/Galvis/package.json
+++ b/studenti/Galvis/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "node ./index.js",
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./index.js",
+    "debug": "nodemon ./index.js"
   },
   "keywords": [],
   "author": "",
