--- a/studenti/MarchionniPW/package.json
+++ b/studenti/MarchionniPW/package.json
@@ -4,7 +4,9 @@
   "description": "Project Work 8 aprile",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js"
   },
   "keywords": [
     "Node",
@@ -15,7 +17,9 @@
   "author": "Roberto Marchionni",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
