--- a/studenti/valentina/package.json
+++ b/studenti/valentina/package.json
@@ -12,8 +12,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-     
-      "express": "^4.17.3",
+        "body-parser": "^1.20.0",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "mysql2": "^2.3.3"
     
     },
     "devDependencies": {
