--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./index.js",
+    "dev": "nodemon ./index.js",
     "maurizio": "node ./index.js"
   },
   "keywords": [],
@@ -14,7 +14,9 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
