--- a/studenti/Fernanda/backend/package.json
+++ b/studenti/Fernanda/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.js",
-    "prod":"node ./index.js"
+    "prod": "node ./index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "mysql2": "^2.3.3"
