--- a/studenti/Sonia/back-end/package.json
+++ b/studenti/Sonia/back-end/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
+    "ejs": "^3.0.2",
     "express-fileupload": "^1.3.1",
     "mysql2": "^2.3.3"
   },
