--- a/studenti/lorenza/backend/package.json
+++ b/studenti/lorenza/backend/package.json
@@ -1,18 +1,21 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "prog lunedì 11 apr",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./index.js",
+    "maurizio": "node ./index.js"
   },
-  "author": "Lorenza",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
