--- a/studenti/valentina/BackEnd/package.json
+++ b/studenti/valentina/BackEnd/package.json
@@ -1,24 +1,32 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./index.js"
+    "dev": "nodemon ./index.js",
+    "debug": "cross-env NODE_ENV=dev nodemon ./index.js",
+    "maurizio": "node ./index.js",
+    "mysite": "cross-env NODE_ENV=mysite node ./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "-": "^0.0.1",
     "body-parser": "^1.20.0",
-    "dem": "^0.0.3",
+    "config": "^3.3.7",
+    "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "fileupload": "^1.0.0",
+    "express-fileupload": "^1.3.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
-    "save": "^2.4.0"
+    "winston": "^3.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
