--- a/studenti/Mammozzetti21-23/FirstTests/package.json
+++ b/studenti/Mammozzetti21-23/FirstTests/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "nodemon ./index.js"
+    "index": "nodemon ./index.js",
+    "routes": "nodemon ./trying nodemone"
   },
   "author": "",
   "license": "ISC",
